[gd_scene load_steps=9 format=3 uid="uid://dllxbmyyau3u5"]

[ext_resource type="Script" path="res://int_edit/int_edit.gd" id="1_pkisn"]

[sub_resource type="Theme" id="Theme_rsp75"]

[sub_resource type="SystemFont" id="SystemFont_aut32"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_cfe30"]
default_font = SubResource("SystemFont_aut32")
default_font_size = 100

[sub_resource type="SystemFont" id="SystemFont_t6at0"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_53h71"]
default_font = SubResource("SystemFont_t6at0")
default_font_size = 43

[sub_resource type="SystemFont" id="SystemFont_60x5w"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_lcjeb"]
default_font = SubResource("SystemFont_60x5w")
default_font_size = 43

[node name="IntEdit" type="HBoxContainer"]
offset_left = 343.0
offset_right = 343.0
offset_bottom = 145.0
script = ExtResource("1_pkisn")

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme = SubResource("Theme_rsp75")

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 2
theme = SubResource("Theme_cfe30")
text = "00:00"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -2
alignment = 1

[node name="IncButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_53h71")
text = " ⇑ "

[node name="DecButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lcjeb")
text = " ⇓ "

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="VBoxContainer/IncButton" to="." method="_on_inc_button_button_down"]
[connection signal="button_up" from="VBoxContainer/IncButton" to="." method="_on_inc_button_button_up"]
[connection signal="button_down" from="VBoxContainer/DecButton" to="." method="_on_dec_button_button_down"]
[connection signal="button_up" from="VBoxContainer/DecButton" to="." method="_on_dec_button_button_up"]
